--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1{
 }
 
 p{
-    color: blueviolet;
+    color: white;
     background-color: rgb(102, 93, 86);
     border-radius: 4px;
     padding: 6px;
